[gd_scene load_steps=9 format=3 uid="uid://xdgcr1nit13b"]

[ext_resource type="Script" path="res://script/ui/SkillsInventory.gd" id="1_6dula"]
[ext_resource type="Texture2D" uid="uid://bwhblxywriqfr" path="res://assets/texture/ui/GUI/GUI_Back_2.png" id="2_yw5sw"]
[ext_resource type="Texture2D" uid="uid://2s1e4sctf2cf" path="res://assets/texture/ui/GUI/GUI_Name_Rim.png" id="3_kg8td"]
[ext_resource type="FontFile" uid="uid://bknriqe0rj8sq" path="res://assets/fonts/main_font.ttf" id="4_l4qd3"]
[ext_resource type="Texture2D" uid="uid://c3nsk3mjyhpfu" path="res://assets/texture/ui/GUI/GUI_Name_Back.png" id="5_rne73"]
[ext_resource type="Texture2D" uid="uid://bxrbfyutxbsm5" path="res://assets/texture/ui/GUI/GUI_Skills_Rim.png" id="6_xqiyi"]
[ext_resource type="Texture2D" uid="uid://cti7y1504yiax" path="res://assets/texture/ui/GUI/Symbols/Mana.png" id="8_o51lp"]
[ext_resource type="Texture2D" uid="uid://cydmu6x6fnrw0" path="res://assets/texture/ui/GUI/Symbols/Strength.png" id="9_edigy"]

[node name="SkillsInventory" type="CanvasLayer"]
script = ExtResource("1_6dula")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 528.0
offset_top = 96.0
offset_right = 968.0
offset_bottom = 546.0
texture = ExtResource("2_yw5sw")
region_rect = Rect2(2, 4.40522, 95, 87.7683)
patch_margin_left = 2

[node name="NinePatchRect4" type="NinePatchRect" parent="."]
offset_left = 172.0
offset_top = 96.0
offset_right = 528.0
offset_bottom = 546.0
texture = ExtResource("2_yw5sw")
region_rect = Rect2(7.12947, 4.40522, 87.7683, 87.7683)
patch_margin_left = 2

[node name="NinePatchRect3" type="NinePatchRect" parent="."]
offset_left = 528.0
offset_top = 93.0
offset_right = 978.0
offset_bottom = 550.0
texture = ExtResource("3_kg8td")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 13
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 13

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
offset_left = 168.0
offset_top = 93.0
offset_right = 978.0
offset_bottom = 550.0
texture = ExtResource("3_kg8td")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 13
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 13

[node name="Label" type="Label" parent="."]
offset_left = 266.0
offset_top = 143.0
offset_right = 435.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 30
text = "Equipped"

[node name="Skill_slot_0" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 210.0
offset_top = 199.0
offset_right = 494.0
offset_bottom = 262.0

[node name="Back" type="NinePatchRect" parent="Skill_slot_0"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("5_rne73")
region_rect = Rect2(7, 11, 31, 25)

[node name="Rim" type="NinePatchRect" parent="Skill_slot_0"]
z_index = 1
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("6_xqiyi")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 12
patch_margin_bottom = 13

[node name="Type" type="TextureRect" parent="Skill_slot_0"]
z_index = 1
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 55.0
offset_bottom = 49.0
expand_mode = 1

[node name="Mana" type="TextureRect" parent="Skill_slot_0"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 227.0
offset_top = 13.0
offset_right = 262.0
offset_bottom = 45.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_o51lp")
expand_mode = 1

[node name="Str" type="TextureRect" parent="Skill_slot_0"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 226.0
offset_top = 37.0
offset_right = 261.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_edigy")
expand_mode = 1

[node name="Name" type="Label" parent="Skill_slot_0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -12.5
offset_right = 38.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")

[node name="DmgAmount" type="Label" parent="Skill_slot_0"]
layout_mode = 0
offset_left = 250.0
offset_top = 38.0
offset_right = 262.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="ManaAmount" type="Label" parent="Skill_slot_0"]
layout_mode = 0
offset_left = 250.0
offset_top = 13.0
offset_right = 268.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="Skill_slot_1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 210.0
offset_top = 274.0
offset_right = 494.0
offset_bottom = 337.0

[node name="Back" type="NinePatchRect" parent="Skill_slot_1"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("5_rne73")
region_rect = Rect2(7, 11, 31, 25)

[node name="Rim" type="NinePatchRect" parent="Skill_slot_1"]
z_index = 1
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("6_xqiyi")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 12
patch_margin_bottom = 13

[node name="Type" type="TextureRect" parent="Skill_slot_1"]
z_index = 1
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 55.0
offset_bottom = 49.0
expand_mode = 1

[node name="Mana" type="TextureRect" parent="Skill_slot_1"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 227.0
offset_top = 13.0
offset_right = 262.0
offset_bottom = 45.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_o51lp")
expand_mode = 1

[node name="Str" type="TextureRect" parent="Skill_slot_1"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 226.0
offset_top = 37.0
offset_right = 261.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_edigy")
expand_mode = 1

[node name="Name" type="Label" parent="Skill_slot_1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -12.5
offset_right = 38.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")

[node name="DmgAmount" type="Label" parent="Skill_slot_1"]
layout_mode = 0
offset_left = 250.0
offset_top = 38.0
offset_right = 262.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="ManaAmount" type="Label" parent="Skill_slot_1"]
layout_mode = 0
offset_left = 250.0
offset_top = 13.0
offset_right = 268.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="Skill_slot_2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 210.0
offset_top = 351.0
offset_right = 494.0
offset_bottom = 414.0

[node name="Back" type="NinePatchRect" parent="Skill_slot_2"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("5_rne73")
region_rect = Rect2(7, 11, 31, 25)

[node name="Rim" type="NinePatchRect" parent="Skill_slot_2"]
z_index = 1
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("6_xqiyi")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 12
patch_margin_bottom = 13

[node name="Type" type="TextureRect" parent="Skill_slot_2"]
z_index = 1
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 55.0
offset_bottom = 49.0
expand_mode = 1

[node name="Mana" type="TextureRect" parent="Skill_slot_2"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 227.0
offset_top = 13.0
offset_right = 262.0
offset_bottom = 45.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_o51lp")
expand_mode = 1

[node name="Str" type="TextureRect" parent="Skill_slot_2"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 226.0
offset_top = 37.0
offset_right = 261.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_edigy")
expand_mode = 1

[node name="Name" type="Label" parent="Skill_slot_2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -12.5
offset_right = 38.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")

[node name="DmgAmount" type="Label" parent="Skill_slot_2"]
layout_mode = 0
offset_left = 250.0
offset_top = 38.0
offset_right = 262.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="ManaAmount" type="Label" parent="Skill_slot_2"]
layout_mode = 0
offset_left = 250.0
offset_top = 13.0
offset_right = 268.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="Skill_slot_3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 210.0
offset_top = 428.0
offset_right = 494.0
offset_bottom = 491.0

[node name="Back" type="NinePatchRect" parent="Skill_slot_3"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("5_rne73")
region_rect = Rect2(7, 11, 31, 25)

[node name="Rim" type="NinePatchRect" parent="Skill_slot_3"]
z_index = 1
layout_mode = 0
offset_right = 284.0
offset_bottom = 63.0
texture = ExtResource("6_xqiyi")
patch_margin_left = 13
patch_margin_top = 13
patch_margin_right = 12
patch_margin_bottom = 13

[node name="Type" type="TextureRect" parent="Skill_slot_3"]
z_index = 1
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 55.0
offset_bottom = 49.0
expand_mode = 1

[node name="Mana" type="TextureRect" parent="Skill_slot_3"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 227.0
offset_top = 13.0
offset_right = 262.0
offset_bottom = 45.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_o51lp")
expand_mode = 1

[node name="Str" type="TextureRect" parent="Skill_slot_3"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 226.0
offset_top = 37.0
offset_right = 261.0
offset_bottom = 69.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_edigy")
expand_mode = 1

[node name="Name" type="Label" parent="Skill_slot_3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -12.5
offset_right = 38.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")

[node name="DmgAmount" type="Label" parent="Skill_slot_3"]
layout_mode = 0
offset_left = 250.0
offset_top = 38.0
offset_right = 262.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="ManaAmount" type="Label" parent="Skill_slot_3"]
layout_mode = 0
offset_left = 250.0
offset_top = 13.0
offset_right = 268.0
offset_bottom = 38.0
theme_override_colors/font_color = Color(0.937255, 0.937255, 0.937255, 1)
theme_override_fonts/font = ExtResource("4_l4qd3")
theme_override_font_sizes/font_size = 13

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 570.0
offset_top = 143.0
offset_right = 933.0
offset_bottom = 505.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
